--- a/package.json
+++ b/package.json
@@ -9,23 +9,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/tailwindcss": "^0.1.2",
-    "@headlessui/vue": "^1.7.7",
+    "@headlessui/tailwindcss": "^0.1.3",
+    "@headlessui/vue": "^1.7.14",
+    "apexcharts": "^3.40.0",
     "cva": "npm:class-variance-authority@^0.4.0",
-    "vue": "^3.2.45",
-    "vue-router": "4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.2",
+    "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
-    "@jridgewell/sourcemap-codec": "^1.4.14",
-    "@types/node": "^18.11.17",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
-    "prettier": "^2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "vue-tsc": "^1.0.11"
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@types/node": "^18.16.16",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^4.9.5",
+    "vite": "^4.3.9",
+    "vue-tsc": "^1.6.5"
   }
 }
